# vcontrol-rs

./: .gitignore  Cargo.toml  ReadMe.md  build.rs  notes.md
.devcontainer/: Dockerfile  devcontainer.json
.zed/: settings.json  settings.jsonc
codegen/: .tool-versions  Cargo.toml  Gemfile  Rakefile  ReadMe.md  devices.used.json  devices.used.yml  event_types.used.json  event_types.used.yml  mappings.used.yml  system_event_types.used.json  system_event_types.used.yml  translations.used.yml  versions.used.yml
codegen/nrbf/: Cargo.toml  ReadMe.md
codegen/nrbf/src/: binary_library.rs  binary_parser.rs  combinator.rs  enumeration.rs  error.rs  length_prefixed_string.rs  lib.rs  message_end.rs  method_invocation.rs  null_object.rs  remoting_message.rs  serialization_header.rs  value.rs
codegen/nrbf/src/binary_parser/: class.rs  mod.rs  object.rs
codegen/nrbf/src/common/: additional_type_info.rs  array_info.rs  class_info.rs  member_type_info.rs
codegen/nrbf/src/data_type/: boolean.rs  byte.rs  char.rs  datetime.rs  decimal.rs  double.rs  int16.rs  int32.rs  int64.rs  int8.rs  length_prefixed_string.rs  mod.rs  single.rs  timespan.rs  uint16.rs  uint32.rs  uint64.rs
codegen/nrbf/src/grammar/: arrays.rs  classes.rs  member_reference.rs  method_call.rs  method_return.rs  mod.rs  null_object.rs  referenceable.rs  remoting_message.rs
codegen/nrbf/src/record/: array_of_value_with_code.rs  array_single_object.rs  array_single_primitive.rs  array_single_string.rs  binary_array.rs  binary_library.rs  binary_method_call.rs  binary_method_return.rs  binary_object_string.rs  class_with_id.rs  class_with_members.rs  class_with_members_and_types.rs  member_primitive_typed.rs  member_primitive_types.rs  member_primitive_untyped.rs  member_reference.rs  message_end.rs  message_flags.rs  mod.rs  object_null.rs  object_null_multiple.rs  object_null_multiple_256.rs  serialization_header.rs  string_value_with_code.rs  system_class_with_members.rs  system_class_with_members_and_types.rs  value_with_code.rs
codegen/nrbf/src/value/: date_time.rs  mod.rs  object.rs
codegen/nrbf/tests/: array_of_customers.rs  array_of_numbers.rs  array_single_primitive.rs  array_single_string.rs  binary_array_jagged.rs  binary_array_jagged_offset.rs  binary_array_rectangular.rs  binary_array_rectangular_offset.rs  binary_array_single_offset.rs  boolean.rs  byte.rs  double.rs  int16.rs  int32.rs  int64.rs  list_of_customers.rs  message.rs  method_call.rs  method_return.rs  sbyte.rs  single.rs  string.rs  test.rs  uint16.rs  uint32.rs  uint64.rs
codegen/rakelib/: clean.rake  cleaned.rake  download.rake  raw.rake
codegen/src/: command.rs  files.rs  lib.rs  main.rs  raw.rs  unique_mapping.rs
codegen/src/cleaned/: data_point_type.rs  event_type.rs  mod.rs
codegen/src/raw/: data_point_type.rs  event_type.rs  event_value_type.rs  mod.rs  sys_device_ident.rs  sys_event_type.rs  table_extension.rs  table_extension_value.rs
examples/: brute.rs  cat.rs  scan.rs
src/: access_mode.rs  command.rs  commands.rs  conversion.rs  data_type.rs  device.rs  device_id_range.rs  device_ident_range.rs  error.rs  lib.rs  main.rs  mappings.rs  optolink.rs  parameter.rs  protocol.rs  raw_type.rs  server.rs  value.rs  vcontrol.rs
src/conversion/: mod.rs
src/device/: device_id.rs  device_id_range.rs  mod.rs
src/protocol/: kw2.rs  p300.rs  vs1.rs  vs2.rs
src/types/: circuit_time.rs  cycle_time.rs  cycletime.rs  date_time.rs  device_id.rs  device_ident.rs  error.rs  mod.rs  sys_time.rs  systime.rs
src/vcontrol/: mod.rs  thing.rs
