[workspace]
members = ["codegen"]

[package]
name = "vcontrol"
description = "A library for communication with Viessmann heating controllers."
version = "0.3.4"
edition = "2021"
authors = ["Markus Reiter <me@reitermark.us>"]
documentation = "https://docs.rs/vcontrol"
repository = "https://github.com/reitermarkus/vcontrol-rs"
homepage = "https://github.com/reitermarkus/vcontrol-rs"
keywords = ["heating", "control", "automation"]
categories = ["hardware-support"]
exclude = ["/.travis.yml"]
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"

[features]
cli = [
  "actix-rt",
  "clap",
  "serde_json",
  "env_logger",
  "impl_webthing",
  "impl_json_schema",
]
impl_json_schema = ["schemars"]
impl_webthing = ["impl_json_schema", "serde_json", "webthing", "actix-rt"]
cat = ["env_logger", "tokio/rt-multi-thread"]
serde_yaml = ["dep:serde_yaml"]

[dependencies]
actix-rt = { version = "2.7", optional = true }
clap = { version = "2.33", optional = true }
chrono = { version = "0.4.23", features = ["serde"] }
log = "0.4"
phf = { version = "0.10", features = ["serde"] }
phf_shared = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
env_logger = { version = "0.9.0", optional = true }
webthing = { version = "0.15.0", optional = true }
schemars = { version = "0.8.8", optional = true }
arrayref = "0.3.6"
tokio = { version = "1.0", features = ["io-util", "macros", "net", "time"] }
tokio-serial = "5.4.2"
pin-project = "1.0.10"
num_enum = "0.5.7"
serialport = { version = "4", default-features = false }
serde_yaml = { version = "0.8", optional = true }

[[bin]]
name = "vcontrol"
required-features = ["cli"]

[[example]]
name = "cat"
required-features = ["cat"]

[[example]]
name = "scan"
required-features = ["serde_yaml"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
chrono = "0.4"
phf_shared = "0.10"
phf_codegen = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.56"

[dev-dependencies]
serde_json = "*"
