[workspace]
members = ["codegen"]

[package]
name = "vcontrol"
description = "A library for communication with Viessmann heating controllers."
version = "0.4.0"
edition = "2024"
authors = ["Markus Reiter <me@reitermark.us>"]
documentation = "https://docs.rs/vcontrol"
repository = "https://github.com/reitermarkus/vcontrol-rs"
homepage = "https://github.com/reitermarkus/vcontrol-rs"
keywords = ["heating", "control", "automation"]
categories = ["hardware-support"]
include = ["build", "build.rs", "examples", "ReadMe.md", "src"]
exclude = []
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"

[features]
cli = [
  "dep:actix-rt",
  "dep:clap",
  "clap?/cargo",
  "dep:serde_json",
  "dep:env_logger",
  "webthing",
  "impl_json_schema",
]
impl_json_schema = ["dep:schemars"]
cat = ["dep:env_logger", "tokio/rt-multi-thread"]
scan = [
  "dep:env_logger",
  "dep:serde_yaml",
  "tokio/fs",
  "tokio/io-std",
  "tokio/io-util",
]
webthing = ["impl_json_schema", "dep:serde_json", "dep:webthing", "dep:actix-rt"]

[dependencies]
actix-rt = { version = "2.10", optional = true }
clap = { version = "4.5", optional = true }
chrono = { version = "0.4.40", features = ["serde"] }
log = "0.4"
phf = { version = "0.11", features = ["serde"] }
phf_shared = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
env_logger = { version = "0.11.8", optional = true }
webthing = { version = "0.15.2", optional = true }
schemars = { version = "0.8.22", optional = true }
arrayref = "0.3.9"
tokio = { version = "1.44", features = ["io-util", "macros", "net", "time"] }
tokio-serial = "5.4.5"
pin-project = "1.1.10"
num_enum = "0.7.3"
serialport = { version = "4", default-features = false }
serde_yaml = { version = "0.9", optional = true }

[[bin]]
name = "vcontrol"
required-features = ["cli"]

[[example]]
name = "cat"
required-features = ["cat"]

[[example]]
name = "scan"
required-features = ["scan"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
chrono = "0.4"
phf_shared = "0.11"
phf_codegen = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"

[dev-dependencies]
serde_json = "1"
