[workspace]
members = ["codegen"]

[package]
name = "vcontrol"
description = "A library for communication with Viessmann heating controllers."
version = "0.5.0"
edition = "2024"
authors = ["Markus Reiter <me@reitermark.us>"]
documentation = "https://docs.rs/vcontrol"
repository = "https://github.com/reitermarkus/vcontrol-rs"
homepage = "https://github.com/reitermarkus/vcontrol-rs"
keywords = ["heating", "control", "automation"]
categories = ["hardware-support"]
include = ["build", "build.rs", "examples", "ReadMe.md", "src"]
exclude = []
license = "MIT OR Apache-2.0"
readme = "ReadMe.md"

[features]
cli = [
  "dep:clap",
  "clap?/cargo",
  "dep:serde_json",
  "dep:env_logger",
  "schemars",
  "tokio/rt-multi-thread",
  "tokio/fs",
  "tokio/io-std",
  "tokio/io-util",
]
schemars = ["dep:schemars"]

[dependencies]
clap = { version = "4.5", optional = true }
chrono = { version = "0.4.40", features = ["serde"] }
log = "0.4"
phf = { version = "0.13", features = ["serde"] }
phf_shared = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
env_logger = { version = "0.11.8", optional = true }
schemars = { version = "0.8.22", optional = true }
arrayref = "0.3.9"
tokio = { version = "1.44", features = ["io-util", "macros", "net", "time"] }
tokio-serial = "5.4.5"
pin-project = "1.1.10"
num_enum = "0.7.3"
serialport = { version = "4.8.1", default-features = false }

[[bin]]
name = "vcontrol"
required-features = ["cli"]

[build-dependencies]
chrono = "0.4"
phf_shared = "0.13"
phf_codegen = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.98"

[dev-dependencies]
serde_json = "1"
