[package]
name = "codegen"
version = "0.1.0"
edition = "2024"
default-run = "generate"
publish = false

[dependencies]
anyhow = "1.0.98"
encoding_rs_io = "0.1.7"
lazy_static = "1.5.0"
nrbf = { version = "0.2", features = ["serde"] }
quick-xml = { version = "0.37.4", features = ["serde", "serialize"] }
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12.0", default-features = false, features = ["base64", "guide", "hex"] }
stringcase = "0.4.0"
